TP-1899 Fix layout overflow

--- a/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
+++ b/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
@@ -182,6 +182,7 @@ article ul,
 .layout-column {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .placeholder {
